# simple-rag-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: perguntas.csv  perguntas_e_respostas_rag.csv
src/: config.py  main.py
src/emb_db/: ingest.py  test.py
src/llm/: clients.py  providers.py  retry.py
src/pipeline/: csv_processor.py
src/rag/: prompt.py  store.py
